k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: satrio-dev
  labels:
    app.kubernetes.io/name: satrio-dev
